--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@ IMG: aqui se guarda la imagen en link o formato jpg -->
 
   <script>
     // Función para mostrar la alerta cuando la página se carga
-    function  mostrarAlerta() {
-      alert("Todos los enlaces van directo a la administración de cada Comunidad autónoma para realizar acciones en relación a la demanda de empleo.\nVER MÁS: Para acceder al portal\nNUEVA SOLICITUD: Crear un usuario.");
+    function mostrarAlerta() {
+        alert("Bienveni@!\n\nSelecciona tu comunidad autónoma para continuar el proceso. Descarga tus periodos ininterrumpidos y adjúntalo al correo anterior.\n\nImportante!\nVER MÁS: Para acceder al portal\nNUEVA SOLICITUD: Crear un usuario\n\nMuchas gracias");
     }
     // Añadir un evento para mostrar la alerta cuando la página se cargue completamente
     window.onload = mostrarAlerta;
 </script>
+
 </body>
 </html>
