--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Guía para Tutores</title>
+</head>
+<body>
+    <div class="container">
+        <div class="logo">
+            <img src="index.png" alt="Logo">
+        </div>
 
+        
+
+        <header>
+            <h1>Guía para Tutores: Cómo Colaborar con los Responsables de Curso y Asegurar el Éxito Formativo</h1>
+        </header>
+
+        <section>
+            <h2>1. Presentación del Responsable del Curso</h2>
+            <p>Cada curso cuenta con un responsable asignado que se encargará de organizar y coordinar el proceso inicial de formación. A través de este primer contacto, recibirás la presentación de tu responsable, así como las credenciales para acceder a la tabla de seguimiento de alumnos.</p>
+            <p>Es importante que conozcas a tu responsable, ya que ambos deberán trabajar de manera coordinada a lo largo del curso. Ellos serán tu punto de contacto inicial para cualquier duda o incidencia relacionada con el curso.</p>
+        </section>
+
+        <section>
+            <h2>2. Uso de la Tabla de Seguimiento</h2>
+            <p>La tabla de seguimiento es una herramienta clave que te permitirá conocer el estado y progreso de cada alumno inscrito en el curso. Esta tabla se actualiza automáticamente con nuevas incorporaciones y modificaciones, lo que te facilita tener siempre la información más reciente al alcance de tu mano.</p>
+            <p>Asegúrate de revisar esta tabla regularmente, ya que será tu principal recurso para realizar el seguimiento del curso y coordinarte con el responsable y los alumnos.</p>
+        </section>
+
+        <section>
+            <h2>3. Incorporación de Alumnos</h2>
+            <p>El proceso de incorporación de alumnos puede no estar completo desde el primer día del curso. Sin embargo, el responsable se encargará de ir añadiendo nuevos alumnos a la tabla de seguimiento de manera progresiva, asegurándose de que todos estén correctamente inscritos y con acceso al curso.</p>
+            <p>A partir de este punto, como tutor, serás responsable de ponerte en contacto con los alumnos para darles la bienvenida, motivarlos y acompañarlos hasta la finalización del curso.</p>
+        </section>
+
+        <section>
+            <h2>4. Cambio en las Responsabilidades del Tutor</h2>
+            <p><strong>¡ATENCIÓN! Cambios Importantes en las Responsabilidades de Seguimiento</strong></p>
+            <p>A raíz de una <strong>situación de urgencia</strong> relacionada con los plazos de ejecución de las convocatorias, es esencial que todos los tutores asuman un papel más activo en el seguimiento de los alumnos. Esta medida busca aliviar la carga de los responsables, permitiéndoles centrarse en las labores de captación de nuevos alumnos.</p>
+            <p><strong>Nuevas Responsabilidades del Tutor:</strong></p>
+            <ul>
+                <li>A partir de ahora, el <strong>seguimiento del curso recae exclusivamente sobre el tutor</strong>, una vez que el responsable haya realizado la conexión inicial de los alumnos.</li>
+                <li>El tutor es el responsable de garantizar que los alumnos completen el curso. Esto incluye la monitorización desde el 25% de progreso, a mitad del curso, y en su finalización.</li>
+                <li>La <strong>tabla de seguimiento</strong> deberá mantenerse actualizada por el tutor, registrando todo el trabajo de seguimiento para que quede reflejado correctamente.</li>
+            </ul>
+            <p>Este cambio es <strong>crucial</strong> para el éxito de las convocatorias actuales. Los tutores son los principales responsables de que los alumnos finalicen su formación.</p>
+        </section>
+
+        <section>
+            <h2>5. Soporte Técnico y Ayuda</h2>
+            <p>A pesar del aumento en la responsabilidad del tutor, el sistema de soporte técnico seguirá activo para ayudar con cualquier incidencia relacionada con bajas de alumnos, problemas técnicos, o cualquier otra cuestión que el tutor no pueda resolver por sí mismo.</p>
+        </section>
+
+        <section>
+            <h2>6. Eliminar la Obligación de las Pruebas ECO</h2>
+            <p>Con el fin de facilitar el trabajo, se ha decidido eliminar la obligatoriedad de las pruebas ECO. Aunque estas pruebas seguirán disponibles y deberán ser recomendadas a los alumnos, ya no serán de carácter obligatorio.</p>
+        </section>
+
+        <footer>
+            <h2>Conclusión</h2>
+            <p>La colaboración entre tutores y responsables es fundamental para garantizar una experiencia formativa de calidad. Mantener una comunicación fluida, utilizar correctamente la tabla de seguimiento y motivar a los alumnos para completar sus cursos son los pasos clave que asegurarán el éxito en cada formación. ¡Gracias por tu dedicación y compromiso en este proceso!</p>
+            <h3>Resumen del cambio:</h3>
+            <ul>
+                <li>El tutor asume <strong>todo el seguimiento del curso</strong> a partir de la conexión inicial del responsable.</li>
+                <li>Se elimina la obligatoriedad de las pruebas ECO, pero deben ser sugeridas.</li>
+                <li>El soporte técnico sigue funcionando en caso de incidencias que el tutor no pueda resolver.</li>
+                <li><strong>La tabla de seguimiento</strong> debe ser actualizada constantemente.</li>
+            </ul>
+        </footer>
+    </div>
+</body>
+</html>
