--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section>
             <h2>3. Incorporación de Alumnos</h2>
             <p>El proceso de incorporación de alumnos puede no estar completo desde el primer día del curso. Sin embargo, el responsable se encargará de ir añadiendo nuevos alumnos a la tabla de seguimiento de manera progresiva, asegurándose de que todos estén correctamente inscritos y con acceso al curso.</p>
-            <p>A partir de este punto, como tutor, serás responsable de ponerte en contacto con los alumnos para darles la bienvenida, motivarlos y acompañarlos hasta la finalización del curso.</p>
+            <p>Desde el primer día como tutor, serás responsable de contactar a los alumnos para darles la bienvenida, motivarlos y acompañarlos hasta la finalización del curso.</p>
         </section>
 
         <section>
